[tool.poetry]
name = "sequence_sampler"
version = "0.1.0"
description = ""
authors = ["Cody Krivacic <krivacic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"
numpy = "^1.19.4"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
